# SCT_Correlations2

./: .gitignore  CMakeLists.txt  README.md
ReleaseVectorDef/: CMakeLists.txt
bin_apix_tel_correlations/src/: apix_tel_correlations.cxx
bin_processCollection/: CMakeLists.txt
bin_processCollection/src/: ProcessCollection.cxx
bin_processFile/: CMakeLists.txt
bin_processFile/src/: ProcessFile.cxx
bin_sz_correlations/src/: run_sz_correlations.cxx
cmake/: FindLCIO.cmake  FindROOT.cmake  FindRapidXML.cmake
core_lib/: CMakeLists.txt
core_lib/includes/: DictOutput.cxx  DictOutput.h  makeDict.bat  sct_LinkDef.h
core_lib/includes/sct/: CSV_File.hh  DictOutput.def  EUTFile.h  ProcessorCollection.h  axis.hh  collection.h  cut_axis.hh  generic_plane.hh  generic_plane_slice_handler.hh  platform.hh  processor.h  processor_prob.hh  ref_ptr.hh  sct_root.hh
core_lib/includes/sct/FileProcessors/: FileProberties.hh  FileProcessorsBase.hh  FileProcessors_standard.hh  rootEventRunOutput.hh
core_lib/includes/sct/analysis/: efficiency.hh  instrip_efficiency.hh  residual_efficiency.hh
core_lib/includes/sct/generic_processors/: AND_note.hh  NOT_note.hh  OR_note.hh  axCut.hh  axCutHandle.hh  clustering.hh  cutNote.hh  doubleAX.hh  drop.hh  generic_operator.hh  group_events.hh  lambda_Note.hh  planeCut.hh  processor_cut_axis.hh  processor_generic_append_plane.hh  processor_generic_correlation.hh  processor_generic_extend_base.hh  processor_generic_make_unique_axis.hh  processor_generic_select.hh  processor_normalize_on_first_plane.hh
core_lib/includes/sct/internal/: ScopeGuard.hh  TTreeVectorExtractor.hh  collectionReader_proc.hh  factory.hh  factoryDef.hh  sct_exceptions.hh  strong_types.h  vector_helpers.hh
core_lib/includes/sct/lagacy/: Cluster_strip.hh  Draw.h  SCT_helpers.hh  s_cuts.h  setup_description.hh  xml_input_file.hh  xml_util.hh
core_lib/includes/sct/lcio/: lcio_collection.hh  lcio_output.hh  lcio_reader.hh
core_lib/includes/sct/legacy/: Cluster_strip.hh  Draw.h  SCT_helpers.hh  cluster.hh  xml_input_file.hh  xml_print.hh  xml_util.hh
core_lib/includes/sct/predef/: DUT_2_Track_correlator.hh  fitterFile.hh  hit.hh  plane.hh  truehitExtractor.hh
core_lib/includes/sct/rootl_link/: sct_LinkDef.h  sct_LinkDefNOLCIO.h
core_lib/includes/sct/xy_processors/: converters.hh  find_nearest.hh  find_nearest_strip.hh  modulo.hh  processorPlaneVSPlane.h  processor_2d.hh  processor_corr2d.hh  processor_correlations.hh  processor_cut_xy.hh  processor_hit2d.hh  processor_hitmap.hh  processor_linear_trans.hh  processor_residual.hh  processor_transform.hh  xy_pro.hh
core_lib/src/: CSV_File.cc  EUTFile.cc  ProcessorCollection.cc  axis.cc  collection.cc  cut_axis.cc  generic_plane.cc  generic_plane_slice_handler.cc  processor.cc  processor_prob.cc  sct_root.cc
core_lib/src/FileProcessors/: FileProberties.cc  FileProcessorsBase.cc  FileProcessors_modulo.cc  FileProcessors_standard.cc  rootEventRunOutput.cc
core_lib/src/analysis/: efficiency.cc  instrip_efficiency.cc  residual_efficiency.cc
core_lib/src/generic_processors/: AND_note.cc  NOT_note.cc  OR_note.cc  axCut.cc  axCutHandle.cc  clustering.cc  doubleAX.cc  drop.cc  enumerate_occurrence.cc  generic_operator.cc  group_events.cc  lambda_Note.cc  planeCut.cc  processor_cut_axis.cc  processor_flatten.cc  processor_generic_append_existing_plane.cc  processor_generic_append_plane.cc  processor_generic_correlation.cc  processor_generic_extend_base.cc  processor_generic_make_unique_axis.cc  processor_generic_select.cc  processor_normalize_on_first_plane.cc
core_lib/src/internal/: TTreeVectorExtractor.cc  collectionReader_proc.cc  sct_exceptions.cc
core_lib/src/lagacy/: Cluster_strip.cc  Draw.cc  SCT_helpers.cc  s_cuts.cc  setup_description.cc  xml_input_file.cc
core_lib/src/lcio/: GBL_track_output.cc  LCGenericObject_output.cc  lcio_TrackerData_output.cc  lcio_TrackerHit_output.cc  lcio_TrackerPulse_Output.cc  lcio_Tracks_output.cc  lcio_collection.cc  lcio_output.cc  lcio_reader.cc
core_lib/src/legacy/: Cluster_strip.cc  Draw.cc  SCT_helpers.cc  s_cuts.cc  setup_description.cc  xml_input_file.cc  xml_print.cc
core_lib/src/predef/: DUT_2_Track_correlator.cc  DUT_2_Track_correlatorMAY_15.cc  fileFitterMay15.cc  fitterFile.cc  planes.cc  truehitExtractor.cc  truehitExtractorMAY15.cc
core_lib/src/xy_processors/: converters.cc  find_nearest.cc  find_nearest_strip.cc  modulo.cc  processorPlaneVSPlane.cc  processor_2d.cc  processor_corr2d.cc  processor_correlations.cc  processor_cut_xy.cc  processor_fill2hist.cc  processor_hit2d.cc  processor_hitmap.cc  processor_linear_trans.cc  processor_residual.cc  processor_transform.cc
macros/: HitMaker.cc  Hitmaker.csv  SCT_DICTIONARY_rdict.pcm  TSave.cc  analisys_db.csv  asd.csv  asdaw.xlsx  clustering.cc  config.cc  config.csv  config.xml  converter.cc  converter2.cc  count_entries.cc  eventMaker.cc  load_SCT_File.cc  out.csv  process_227.cc  process_csv.cc  t1.pgsql
