
FIND_PACKAGE( ROOT REQUIRED)

file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/ReleaseVectorDef/src/*.cc)




INCLUDE_DIRECTORIES( . inc ${ROOT_INCLUDE_DIR} )

ADD_LIBRARY(ReleaseVectorDef SHARED ${SOURCES} )

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ReleaseVectorDef/inc)


target_link_libraries(ReleaseVectorDef  ${ROOT_LIBRARIES} ${ADDITIONAL_LIBRARIES}  ${RAPIDXML_INCLUDE_DIRS})


INSTALL(TARGETS ReleaseVectorDef
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)
